--- a/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
+++ b/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "well_height = 125\n",
-    "daily_distance = 30\n",
-    "nightnly_distance = 20\n",
-    "snail_position = ''"
+    "well_height_cm = 125\n",
+    "daily_distance_cm = 30\n",
+    "nightnly_distance_cm = -20\n",
+    "snail_position = 0"
    ]
   },
   {
@@ -49,11 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "days = ''"
+    "days = 0"
    ]
   },
   {
@@ -64,11 +64,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "total_distance_cm = 0\n",
+    "distance_per_day = daily_distance_cm + nightnly_distance_cm\n",
+    "\n",
+    "while True:\n",
+    "    days += 1\n",
+    "    \n",
+    "    total_distance_cm = distance_per_day + total_distance_cm\n",
+    "    print (days, total_distance_cm)\n",
+    "    if total_distance_cm >= well_height_cm:\n",
+    "        break\n",
+    "\n",
+    "print('\\n\\nThe snail made it out by day number', days)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 10 40\n",
+      "2 20 50\n",
+      "3 30 60\n",
+      "4 40 70\n",
+      "5 50 80\n",
+      "6 60 90\n",
+      "7 70 100\n",
+      "8 80 110\n",
+      "9 90 120\n",
+      "10 100 130\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_distance_cm = 0\n",
+    "distance_per_day = daily_distance_cm + nightnly_distance_cm\n",
+    "\n",
+    "while True:\n",
+    "    days += 1\n",
+    "    \n",
+    "    \n",
+    "    total_distance_cm = distance_per_day + total_distance_cm\n",
+    "    sum_daily = total_distance_cm + daily_distance_cm\n",
+    "    print (days, total_distance_cm, sum_daily)\n",
+    "    if total_distance_cm >= well_height_cm: break\n",
+    "    elif total_distance_cm + daily_distance_cm >= well_height_cm: break"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,10 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "The snail made it out by day number 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('\\n\\nThe snail made it out by day number', days)"
+   ]
   },
   {
    "cell_type": "markdown",
