--- a/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
+++ b/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
@@ -49,10 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gendalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "spells = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,10 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_w = 0\n",
+    "saruman_w = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,10 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i, j in zip(gendalf, saruman):\n",
+    "    if i < j:\n",
+    "        gandalf_w += 1\n",
+    "    else: \n",
+    "        saruman_w +=1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,10 +106,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saruman won\n"
+     ]
+    }
+   ],
+   "source": [
+    "if gandalf_w > saruman_w:\n",
+    "    print(\"Gandalf won\")\n",
+    "elif saruman_w > gandalf_w:\n",
+    "    print(\"Saruman won\")\n",
+    "else: \n",
+    "    print(\"Tie\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
