--- a/1.-Python/3.-Bus/bus.ipynb
+++ b/1.-Python/3.-Bus/bus.ipynb
@@ -35,11 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Variables\n",
     "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8), (4, 6), (2, 3)]"
    ]
   },
@@ -52,10 +51,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# of stops is 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_stops = 0\n",
+    "for parada in stops:\n",
+    "    total_stops += 1\n",
+    "    \n",
+    "print('# of stops is', total_stops)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +80,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# of passengers x stop is [10, 13, 11, 10, 14, 10, 7, 5, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pasajeros (stop):\n",
+    "    inside = stop[0] - stop[1]\n",
+    "    return inside\n",
+    "\n",
+    "pasxstop = []\n",
+    "sumon = 0\n",
+    "for stop in stops:\n",
+    "    net = pasajeros (stop)\n",
+    "    sumon += net\n",
+    "    pasxstop.append(sumon)\n",
+    "    \n",
+    "print('# of passengers x stop is',pasxstop)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +115,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(max(pasxstop))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +139,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg = sum(pasxstop)/ len(pasxstop)\n",
+    "print(round(avg, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#work on standard deviation !!!"
+   ]
   }
  ],
  "metadata": {
@@ -117,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
