--- a/1.-Python/4.-Robin-Hood/robin-hood.ipynb
+++ b/1.-Python/4.-Robin-Hood/robin-hood.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,10 +55,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(-3, 2), (4, 5), (5, 7), (2, 2)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "arrow_hits=[]\n",
+    "for x in range(0,len(points)):\n",
+    "    for y in range(0,len(points)):\n",
+    "        if points[x] == points[y] and x != y:\n",
+    "            arrow_hits.append(points[x])\n",
+    "          \n",
+    "print(set(arrow_hits))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,10 +86,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1 = 10 \n",
+      "\n",
+      "Q2 = 0 \n",
+      "\n",
+      "Q3 = 4 \n",
+      "\n",
+      "Q4 = 6 \n",
+      "\n",
+      "out = 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "Q1=0\n",
+    "Q2=0\n",
+    "Q3=0\n",
+    "Q4=0\n",
+    "out=0\n",
+    "for x,y in points:\n",
+    "    if x>0 and y>0:\n",
+    "        Q1+=1\n",
+    "    elif x<0 and y<0:\n",
+    "        Q3+=1\n",
+    "    elif x>0 and y<0:\n",
+    "        Q3+=1\n",
+    "    elif x<0 and y>0:\n",
+    "        Q4+=1\n",
+    "    else:\n",
+    "        out+=1\n",
+    "\n",
+    "print('Q1 =', Q1, '\\n' )\n",
+    "print('Q2 =', Q2, '\\n' )\n",
+    "print('Q3 =', Q3, '\\n' )\n",
+    "print('Q4 =', Q4, '\\n' )\n",
+    "print('out =', out)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,10 +143,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 2)\n",
+      "(0, -2)\n",
+      "2 couple of arrows are the closest to the center\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dist(p0,p1):\n",
+    "    return(((p0[0]-p1[0])**2)+((p0[1]-p1[1])**2))**(1/2)\n",
+    "dist_2_p=[]\n",
+    "red_dot = (0, 0)\n",
+    "for i in points:\n",
+    "    dist_2_p.append(dist(i,red_dot))\n",
+    "dist_2_p\n",
+    "min_value=min(dist_2_p)\n",
+    "for i in range(0,len(dist_2_p)):\n",
+    "    if dist_2_p[i] == min_value:\n",
+    "        print(points[i])\n",
+    "print(len(points[i]), 'arrows are the closest to the center')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,10 +181,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(9, 9), (-8, -9)]\n",
+      "2 Arrows out... We all know Robin hood would have not missed that :P\n"
+     ]
+    }
+   ],
+   "source": [
+    "missed_arr=0\n",
+    "centre = (0, 0)\n",
+    "arrows_out=[]\n",
+    "for i in points:\n",
+    "    if dist(i,red_dot)>9:\n",
+    "        arrows_out.append(i)\n",
+    "        missed_arr+=1\n",
+    "print(arrows_out) \n",
+    "print(len(arrows_out), 'Arrows out... We all know Robin hood would have not missed that :P')"
+   ]
   }
  ],
  "metadata": {
@@ -125,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
