--- a/1.-Python/5.-Temperature-Processor/temperature.ipynb
+++ b/1.-Python/5.-Temperature-Processor/temperature.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,10 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "minim = min(temperatures_C)\n",
+    "print(minim)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +70,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxi = max(temperatures_C)\n",
+    "print(maxi)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +95,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[70, 76, 80, 81, 80, 83, 90, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "gr_70 = []\n",
+    "\n",
+    "for i in temperatures_C:\n",
+    "    if i >= 70:\n",
+    "        gr_70.append(i)\n",
+    "print(gr_70)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg = sum(temperatures_C) / len(temperatures_C)\n",
+    "\n",
+    "print(avg)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +150,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[33, 66, 65, 54, 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+      "62\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing_val = int(sum(temperatures_C[0:3]) / 3)\n",
+    "\n",
+    "for x in range(len(temperatures_C)):\n",
+    "        temperatures_C[3] = missing_val\n",
+    "print(temperatures_C)\n",
+    "\n",
+    "tavg = sum(temperatures_C) / len(temperatures_C)\n",
+    "\n",
+    "print(int(tavg))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,7 +191,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "convertion = (1.8 * float(input('insert a number'))) + 32\n",
+    "\n",
+    "print(convertion)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
